<resources>
    <string name="app_name">T120B192</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Grid of Measurements</string>
    <string name="highlighted_fragment_label">Location of the User</string>
    <string name="user_fragment_label">User List</string>
    <string name="user_edit_fragment_label">Edit User</string>
    <string name="user_add_fragment_label">Add User</string>
    <string name="signal_fragment_label">Signal List</string>

    <string name="users">User List</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="mac">MAC Address</string>
    <string name="s1">S1:</string>
    <string name="s2">S2:</string>
    <string name="s3">S3:</string>
    <string name="rss1">RSS1</string>
    <string name="rss2">RSS2</string>
    <string name="rss3">RSS3</string>
    <string name="id">ID</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="value">Value:</string>
    <string name="find">Find</string>
    <string name="signallist">Signal List</string>
    <string name="coordinates">Coordinates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>