<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".fragments.UserListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B8B8B8"
        android:backgroundTint="#B8B8B8">

        <TextView
            android:id="@+id/fixedmacTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/mac"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#020202"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/macTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/mac"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixedmacTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FDFDFD"
        android:backgroundTint="#FFFFFF">

        <TextView
            android:id="@+id/fixeds1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rss1"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#858585"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fixeds2TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fixeds2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:text="@string/rss2"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#858585"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fixeds3TextView"
            app:layout_constraintStart_toEndOf="@+id/fixeds1TextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fixeds3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/rss3"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#858585"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fixeds2TextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/s1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/s1"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toStartOf="@+id/s2TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fixeds1TextView" />

        <TextView
            android:id="@+id/s2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:text="@string/s2"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toStartOf="@+id/s3TextView"
            app:layout_constraintStart_toEndOf="@+id/s1TextView"
            app:layout_constraintTop_toBottomOf="@+id/fixeds2TextView" />

        <TextView
            android:id="@+id/s3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/s3"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/s2TextView"
            app:layout_constraintTop_toBottomOf="@+id/fixeds3TextView" />

        <Button
            android:id="@+id/findUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#F6F0F0"
            app:icon="@android:drawable/ic_menu_mylocation"
            app:iconSize="25dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editUserButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/s1TextView" />

        <Button
            android:id="@+id/editUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#F6F0F0"
            app:icon="@android:drawable/ic_menu_preferences"
            app:iconSize="25dp"
            app:iconTint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/findUserButton"
            app:layout_constraintTop_toBottomOf="@+id/s3TextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>